First cut of random terrain
